# ip-complaint

./: .gitignore  AGENTS.md  FILE_TREE.txt  LICENSE  PRD.md  README.md  package-lock.json  package.json  task.md
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260315_0001_initial.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: router.py
apps/api/app/api/routers/: cases.py  events.py  health.py  search.py
apps/api/app/core/: __init__.py  auth.py  config.py  errors.py  policy.py  serialization.py
apps/api/app/db/: __init__.py  base.py  session.py  types.py
apps/api/app/models/: __init__.py  entities.py  enums.py
apps/api/app/schemas/: base.py  cases.py  events.py  health.py  search.py
apps/api/app/services/: __init__.py  audit.py  cases.py  evidence.py  generated_output_storage.py  ingest.py  manifest.py  parsers.py  raw_artifact_storage.py  search.py
apps/api/incident_attribution_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: conftest.py  test_cases.py  test_health.py  test_ingest.py  test_search.py  test_services.py
apps/web/: index.html  package.json  tsconfig.json
apps/web/src/: styles.css
apps/web/src/app/: App.tsx
apps/web/src/components/: CorrelationWorkspace.tsx  WarningBanner.tsx
docs/: api-spec.md  architecture.md  backlog.md  codex-kickoff-prompt.md  data-model.md  detection-and-attribution.md  document-templates.md  implementation-plan.md  openapi.yaml  schema.sql  security-and-compliance.md  ux-workflows.md
infra/: docker-compose.yml
(+3 files in other folders)
